--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
+  "homepage": "http://jiho3894.github.io/Next-Movie",
   "name": "nextjs-study",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2"
